--- a/public/css/app.css
+++ b/public/css/app.css
@@ -814,6 +814,9 @@ select {
 .flex-col {
   flex-direction: column;
 }
+.flex-wrap {
+  flex-wrap: wrap;
+}
 .items-start {
   align-items: flex-start;
 }
