--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1000,11 +1000,6 @@ select {
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
-.space-y-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
 .space-x-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
@@ -1539,6 +1534,9 @@ select {
 }
 .hoverable:hover .mega-menu {
     display: block;
+}
+.ck-editor__editable_inline {
+    min-height: 500px;
 }
 .first-letter\:uppercase::first-letter {
   text-transform: uppercase;
